# minor-masker

./: README.md  pyproject.toml
src/minor_masker/: __init__.py  __main__.py  cli.py  obfuscate.py  pipeline.py
tests/: test_obfuscate.py
