[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "minor-masker"
version = "0.1.0"
description = "Detect faces, estimate apparent age, and obfuscate regions (blur, pixelate, solid masks)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "deepface>=0.0.90",
  "opencv-python-headless>=4.8.0",
  "numpy>=1.24.0",
]

[project.scripts]
minor-masker = "minor_masker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
